tests/single_instruction_translation_validation/mcsema/register-variants-samereg/lzcntl_r32_r32/Output/test-lstate.out
/home/ubuntu/Install/llvm/llvm.4.0.0.install//bin/opt: test.mod.ll:179:22: error: use of undefined value '@my.ctlz.i32'
  %6 = tail call i32 @my.ctlz.i32(i32 %5, i1 false) #22
                     ^
0.02user 0.02system 0:00.15elapsed 37%CPU (0avgtext+0avgdata 27160maxresident)k
0inputs+16outputs (0major+3257minor)pagefaults 0swaps
